--- a/page_visits_funnel.ipynb
+++ b/page_visits_funnel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e43257f1",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1a037d8a",
    "metadata": {},
    "outputs": [],
@@ -143,34 +143,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ae71f9e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                  user_id           cart_time  \\\n",
+      "0    2be90e7c-9cca-44e0-bcc5-124b945ff168 2017-11-07 20:45:00   \n",
+      "1    2be90e7c-9cca-44e0-bcc5-124b945ff168 2017-11-07 20:45:00   \n",
+      "2    2be90e7c-9cca-44e0-bcc5-124b945ff168 2017-11-07 20:45:00   \n",
+      "3    4397f73f-1da3-4ab3-91af-762792e25973 2017-05-27 01:35:00   \n",
+      "4    a9db3d4b-0a0a-4398-a55a-ebb2c7adf663 2017-03-04 10:38:00   \n",
+      "..                                    ...                 ...   \n",
+      "477  59d2b685-383a-4fce-a325-35d985713a8b 2017-01-20 03:58:00   \n",
+      "478  a1203970-92ae-4fc7-843e-e1740c1be9d5 2017-11-12 23:07:00   \n",
+      "479  55de53ae-89f6-43ff-a26d-df284678aca1 2017-03-17 19:56:00   \n",
+      "480  0ea4cc68-dae4-4e35-b3e0-f0889932e1b5 2017-05-12 08:53:00   \n",
+      "481  0ea4cc68-dae4-4e35-b3e0-f0889932e1b5 2017-05-12 08:53:00   \n",
+      "\n",
+      "          checkout_time  \n",
+      "0   2017-11-07 21:14:00  \n",
+      "1   2017-11-07 20:50:00  \n",
+      "2   2017-11-07 21:11:00  \n",
+      "3                   NaT  \n",
+      "4   2017-03-04 11:04:00  \n",
+      "..                  ...  \n",
+      "477                 NaT  \n",
+      "478                 NaT  \n",
+      "479 2017-03-17 20:04:00  \n",
+      "480 2017-05-12 08:57:00  \n",
+      "481 2017-05-12 09:20:00  \n",
+      "\n",
+      "[482 rows x 3 columns]\n",
+      "122\n",
+      "0.25311203319502074\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "cart_checkout = pd.merge(cart, checkout, how='left')\n",
-    "# print(cart_checkout)\n",
+    "print(cart_checkout)\n",
     "\n",
     "cart_checkout_rows = len(cart_checkout)\n",
     "null_checkout_times = len(cart_checkout[cart_checkout.checkout_time.isnull()])\n",
-    "# print(null_checkout_times)\n",
-    "# print(float(null_checkout_times)/cart_checkout_rows)\n",
+    "print(null_checkout_times)\n",
+    "print(float(null_checkout_times)/cart_checkout_rows)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4addc0a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1688963210702341\n"
+     ]
+    }
+   ],
+   "source": [
     "checkout_purchase = pd.merge(checkout, purchase, how='left')\n",
     "checkout_purchase_rows = len(checkout_purchase)\n",
     "null_purchase_times = len(checkout_purchase[checkout_purchase.purchase_time.isnull()])\n",
     "print(float(null_purchase_times)/checkout_purchase_rows)\n",
     "\n",
     "all_data = visits.merge(cart, how='left').merge(checkout, how='left').merge(purchase, how='left')\n",
-    "\n",
-    "\n",
-    "# all_data['time_to_purchase'] = \\\n",
-    "#     all_data.purchase_time - \\\n",
-    "#     all_data.visit_time\n",
-    "\n",
-    "# print(all_data.time_to_purchase)\n",
-    "# print(all_data.time_to_purchase.mean())"
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ac433a6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0                  NaT\n",
+      "1      0 days 00:44:00\n",
+      "2                  NaT\n",
+      "3                  NaT\n",
+      "4                  NaT\n",
+      "             ...      \n",
+      "2367               NaT\n",
+      "2368               NaT\n",
+      "2369               NaT\n",
+      "2370               NaT\n",
+      "2371               NaT\n",
+      "Name: time_to_purchase, Length: 2372, dtype: timedelta64[ns]\n",
+      "0 days 00:43:53.360160965\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "all_data['time_to_purchase'] = \\\n",
+    "    all_data.purchase_time - \\\n",
+    "    all_data.visit_time\n",
+    "\n",
+    "print(all_data.time_to_purchase)\n",
+    "print(all_data.time_to_purchase.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b66e684f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
